{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 25,
  "lineage": "d4f2d977-4aff-7d74-e59f-51f3eecfffd3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051a7f1f339e868a1",
            "domain": "vpc",
            "id": "eipalloc-051a7f1f339e868a1",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-215-76-152.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.76.152",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Chapter": "practice3",
              "Name": "student961018",
              "Subject": "cloud-programming"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ca0b865258417c3",
            "domain": "vpc",
            "id": "eipalloc-00ca0b865258417c3",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-143-14-61.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.143.14.61",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Chapter": "practice3",
              "Name": "student961018",
              "Subject": "cloud-programming"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw_961018",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112992234:internet-gateway/igw-062b1535e64c75395",
            "id": "igw-062b1535e64c75395",
            "owner_id": "471112992234",
            "tags_all": {
              "Chapter": "practice3",
              "Name": "student961018",
              "Subject": "cloud-programming"
            },
            "vpc_id": "vpc-0ab4455a316bd7c0b"
          },
          "dependencies": [
            "aws_vpc.my_vpc_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051a7f1f339e868a1",
            "association_id": "eipassoc-02db8e9a0016c5099",
            "connectivity_type": "public",
            "id": "nat-0aebf3f461cc50d41",
            "network_interface_id": "eni-065c52a8c8819c98d",
            "private_ip": "10.12.0.60",
            "public_ip": "13.215.76.152",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e43a85df39240d67",
            "tags_all": {
              "Chapter": "practice3",
              "Name": "student961018",
              "Subject": "cloud-programming"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip1",
            "aws_internet_gateway.my_igw_961018",
            "aws_subnet.pub_sub_961018_1",
            "aws_vpc.my_vpc_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ca0b865258417c3",
            "association_id": "eipassoc-0769dcc1ba115825e",
            "connectivity_type": "public",
            "id": "nat-09ded9ab77681f4ea",
            "network_interface_id": "eni-0d217fcdc41a99d41",
            "private_ip": "10.23.0.30",
            "public_ip": "18.143.14.61",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-091dcca1ce049edd9",
            "tags_all": {
              "Chapter": "practice3",
              "Name": "student961018",
              "Subject": "cloud-programming"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip2",
            "aws_internet_gateway.my_igw_961018",
            "aws_subnet.pub_sub_961018_2",
            "aws_vpc.my_vpc_961018",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112992234:route-table/rtb-063e76c47aade06f2",
            "id": "rtb-063e76c47aade06f2",
            "owner_id": "471112992234",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aebf3f461cc50d41",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Chapter": "practice3",
              "Name": "student961018",
              "Subject": "cloud-programming"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab4455a316bd7c0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip1",
            "aws_internet_gateway.my_igw_961018",
            "aws_nat_gateway.nat_gw_1",
            "aws_subnet.pub_sub_961018_1",
            "aws_vpc.my_vpc_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_rt1_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112992234:route-table/rtb-04474a0d1fcd1c7c6",
            "id": "rtb-04474a0d1fcd1c7c6",
            "owner_id": "471112992234",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {
              "Chapter": "practice3",
              "Name": "student961018",
              "Subject": "cloud-programming"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab4455a316bd7c0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112992234:route-table/rtb-00cb4908bdaa32e14",
            "id": "rtb-00cb4908bdaa32e14",
            "owner_id": "471112992234",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09ded9ab77681f4ea",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Chapter": "practice3",
              "Name": "student961018",
              "Subject": "cloud-programming"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab4455a316bd7c0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip2",
            "aws_internet_gateway.my_igw_961018",
            "aws_nat_gateway.nat_gw_2",
            "aws_subnet.pub_sub_961018_2",
            "aws_vpc.my_vpc_961018",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_rt2_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112992234:route-table/rtb-0dbebf9c93764508a",
            "id": "rtb-0dbebf9c93764508a",
            "owner_id": "471112992234",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {
              "Chapter": "practice3",
              "Name": "student961018",
              "Subject": "cloud-programming"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab4455a316bd7c0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt_961018",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112992234:route-table/rtb-0891b6bbd7834bb2a",
            "id": "rtb-0891b6bbd7834bb2a",
            "owner_id": "471112992234",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-062b1535e64c75395",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Chapter": "practice3",
              "Name": "student961018",
              "Subject": "cloud-programming"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab4455a316bd7c0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw_961018",
            "aws_vpc.my_vpc_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prv_rt1_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062e0daa12b02757a",
            "route_table_id": "rtb-063e76c47aade06f2",
            "subnet_id": "subnet-0912e6e336bc44957"
          },
          "dependencies": [
            "aws_eip.nat_eip1",
            "aws_internet_gateway.my_igw_961018",
            "aws_nat_gateway.nat_gw_1",
            "aws_route_table.prv_rt1",
            "aws_subnet.prv_sub_961018_1",
            "aws_subnet.pub_sub_961018_1",
            "aws_vpc.my_vpc_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prv_rt1_db_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083ad95743fd63a87",
            "route_table_id": "rtb-04474a0d1fcd1c7c6",
            "subnet_id": "subnet-0694250f5c1abb6f6"
          },
          "dependencies": [
            "aws_route_table.prv_rt1_db",
            "aws_subnet.prv_sub_961018_1_db",
            "aws_vpc.my_vpc_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prv_rt2_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0941dcec203f13f17",
            "route_table_id": "rtb-00cb4908bdaa32e14",
            "subnet_id": "subnet-056bba4a88b7d24fb"
          },
          "dependencies": [
            "aws_eip.nat_eip2",
            "aws_internet_gateway.my_igw_961018",
            "aws_nat_gateway.nat_gw_2",
            "aws_route_table.prv_rt2",
            "aws_subnet.prv_sub_961018_2",
            "aws_subnet.pub_sub_961018_2",
            "aws_vpc.my_vpc_961018",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prv_rt2_db_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e59de0581cc41432",
            "route_table_id": "rtb-0dbebf9c93764508a",
            "subnet_id": "subnet-04908ffe1c6edc481"
          },
          "dependencies": [
            "aws_route_table.prv_rt2_db",
            "aws_subnet.prv_sub_961018_2_db",
            "aws_vpc.my_vpc_961018",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5bcdb3d3edf768d",
            "route_table_id": "rtb-0891b6bbd7834bb2a",
            "subnet_id": "subnet-0e43a85df39240d67"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw_961018",
            "aws_route_table.pub_rt_961018",
            "aws_subnet.pub_sub_961018_1",
            "aws_vpc.my_vpc_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_asso2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b59d2e704d9afbe",
            "route_table_id": "rtb-0891b6bbd7834bb2a",
            "subnet_id": "subnet-091dcca1ce049edd9"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw_961018",
            "aws_route_table.pub_rt_961018",
            "aws_subnet.pub_sub_961018_2",
            "aws_vpc.my_vpc_961018",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sub_961018_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112992234:subnet/subnet-0912e6e336bc44957",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.12.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0912e6e336bc44957",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112992234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Chapter": "practice3",
              "Name": "student961018",
              "Subject": "cloud-programming"
            },
            "vpc_id": "vpc-0ab4455a316bd7c0b"
          },
          "dependencies": [
            "aws_vpc.my_vpc_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sub_961018_1_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112992234:subnet/subnet-0694250f5c1abb6f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.12.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0694250f5c1abb6f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112992234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Chapter": "practice3",
              "Name": "student961018",
              "Subject": "cloud-programming"
            },
            "vpc_id": "vpc-0ab4455a316bd7c0b"
          },
          "dependencies": [
            "aws_vpc.my_vpc_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sub_961018_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112992234:subnet/subnet-056bba4a88b7d24fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.23.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056bba4a88b7d24fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112992234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Chapter": "practice3",
              "Name": "student961018",
              "Subject": "cloud-programming"
            },
            "vpc_id": "vpc-0ab4455a316bd7c0b"
          },
          "dependencies": [
            "aws_vpc.my_vpc_961018",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sub_961018_2_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112992234:subnet/subnet-04908ffe1c6edc481",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.23.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04908ffe1c6edc481",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112992234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Chapter": "practice3",
              "Name": "student961018",
              "Subject": "cloud-programming"
            },
            "vpc_id": "vpc-0ab4455a316bd7c0b"
          },
          "dependencies": [
            "aws_vpc.my_vpc_961018",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_961018_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112992234:subnet/subnet-0e43a85df39240d67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.12.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e43a85df39240d67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112992234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Chapter": "practice3",
              "Name": "student961018",
              "Subject": "cloud-programming"
            },
            "vpc_id": "vpc-0ab4455a316bd7c0b"
          },
          "dependencies": [
            "aws_vpc.my_vpc_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_961018_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112992234:subnet/subnet-091dcca1ce049edd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.23.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091dcca1ce049edd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112992234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Chapter": "practice3",
              "Name": "student961018",
              "Subject": "cloud-programming"
            },
            "vpc_id": "vpc-0ab4455a316bd7c0b"
          },
          "dependencies": [
            "aws_vpc.my_vpc_961018",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr_961018"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc_961018",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112992234:vpc/vpc-0ab4455a316bd7c0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.12.0.0/23",
            "default_network_acl_id": "acl-0fb671f9639a7865f",
            "default_route_table_id": "rtb-082b1a90eeafa502e",
            "default_security_group_id": "sg-0a29ffa8930ffe70a",
            "dhcp_options_id": "dopt-07e4c5b1c6b17cbec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ab4455a316bd7c0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082b1a90eeafa502e",
            "owner_id": "471112992234",
            "tags_all": {
              "Chapter": "practice3",
              "Name": "student961018",
              "Subject": "cloud-programming"
            }
          }
        }
      ]
    }
  ]
}